src/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
    scroll-behavior: smooth;
}

@layer components {
    .btn-primary {
        @apply py-2 px-4 bg-primary-500 text-white font-semibold rounded-lg shadow-md hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-400 focus:ring-opacity-75;
    }
    .btn-secondary {
        @apply py-2 px-4 bg-gray-200 text-white font-semibold rounded-lg shadow-md hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-400 focus:ring-opacity-75;
    }
}


/* Header Titel Effect*/

    #changing-word {
        display: block;
    } 

    .letter {
        display: inline-block;
        position: relative;
        transform: translateZ(25px);
        transform-origin: 0% 50% 25px;
    }

    .letter.out {
        visibility: hidden;
        opacity: 0;
    }
    
    .letter.behind {
        transform: rotateX(-90deg);
    }

    .letter.in {
        visibility: visible;
        opacity: 1;
        transition: visibility 0s linear 0.38s, opacity 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
    }


/* YOUR BENEFIT SECTION: Icon animation*/
    
    /* Initially hide animated icon */
    .ts-animated-icon {
        display: none;
    }

    /* Show animated icon on card hover */
    .ts-hover-trigger:hover .ts-static-icon {
        display: none;
    }

    .ts-hover-trigger:hover .ts-animated-icon {
        display: block;
    }

    .icon-container {
        height: 20px;
    }

    .fade-out {
        opacity: 0;
        transition: opacity 0.5s ease-in-out;
    }

    .fade-in {
        opacity: 1;
        transition: opacity 0.5s ease-in-out;
    }


/* ABOUT US: Button with Icon Animation */

@media (min-width: 768px) { 
   
        .ts-external-link {
            text-align: center;
            width: auto; 
            overflow: hidden; /* prevents the pseudo element from being visible outside the button */
            position: relative; 
        }

        .ts-external-link span {
            display: inline-block;
            position: relative;
            transition: padding-right 0.5s;
        }

        .ts-external-link::after {
            content: '\2197';
            position: absolute;
            opacity: 0;
            top: 50%; 
            right: -20px; /* Hide icon outside the button */
            transform: translateY(-50%);
            transition: opacity 0.5s, right 0.5s;
        }

        .ts-external-link:hover {
            width: auto;
        }

        .ts-external-link:hover::after {
            opacity: 1;
            right: 5px; /* Position next to the button text */
        }

    }


/* DOCUMENT - List item marker */

.ts-list-marker::marker {
    color: #4F46E5;
    font-size: 1.5rem;
}

